kubernetes/apps/glance/glance-k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance-k8s
  namespace: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance-k8s
  template:
    metadata:
      labels:
        app: glance-k8s
    spec:
      serviceAccountName: glance-k8s
      securityContext:
        fsGroup: 2000
      containers:
        - name: glance-k8s
          image: ghcr.io/lukasdietrich/glance-k8s/glance-k8s:v0.4.3
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
