kubernetes/apps/glance/glance-k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance-k8s
  namespace: glance
spec:
  selector:
    app: glance-k8s
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
