kubernetes/apps/glance/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance
  namespace: glance
  annotations:
    glance/url: https://maya.nihalxkumar.dev
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`maya.nihalxkumar.dev`)
      kind: Rule
      services:
        - name: glance
          port: 8080
  tls:
    secretName: nihalxkumar-dev-tls
